crates/ars-i18n/tests/ui/translate_unmatched_closing_brace.stderr
error: Translate message has unmatched `}`
 --> tests/ui/translate_unmatched_closing_brace.rs:6:22
  |
6 |     #[translate(en = "count} items")]
  |                      ^^^^^^^^^^^^^^
