crates/ars-i18n/tests/ui/translate_unmatched_closing_brace.rs
use ars_i18n::Translate;

#[derive(Translate)]
#[translate(fallback = "en")]
enum BadText {
    #[translate(en = "count} items")]
    Count { count: usize },
}

fn main() {}
